# cookiecutter-pypackage

./: README.rst  cookiecutter.json
docs/: prompts.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
